--- a/lay.jade
+++ b/lay.jade
@@ -1,6 +1,6 @@
 
-link(rel='Stylesheet', href='seman/semantic.css')
-script(href='seman/semantic.js')
+link(rel='Stylesheet', href='semantic/semantic.css')
+script(href='semantic/semantic.js')
 
 .ui.inverted.segment
 	div.ui.three.column.grid
